# buzhash-haskell

./: LICENSE  buzhash.cabal
cbits/: bindings.c  bindings.h  buzhash.c  buzhash.h  ringbuf.h
src/Data/: BuzHash.hs
src/Data/BuzHash/: IO.hs
src/Data/BuzHash/Internal/: ChunkSplit.hs  ListAnd.hs  Prim.hsc
tests/: BuzHash.hs  Table.hs  doctests.hs  tasty.hs
