name: buzhash
version: 0.0.1
-- synopsis: 
-- description: 
license: MIT
license-file: LICENSE
author: Johan Kiviniemi
maintainer: devel@johan.kiviniemi.name
-- copyright: 
category: Data
build-type: Simple
-- extra-source-files: 
cabal-version: >=1.10

library
  exposed-modules: Data.BuzHash
                 , Data.BuzHash.Internal.ChunkSplit
                 , Data.BuzHash.Internal.ListAnd
                 , Data.BuzHash.Internal.Prim
                 , Data.BuzHash.IO
  c-sources: cbits/buzhash.c
           , cbits/bindings.c
  include-dirs: cbits
  -- other-modules:
  build-depends: base >= 4.6 && < 4.8
               , bindings-DSL == 1.0.*
               , bytestring == 0.10.*
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  cc-options: -std=gnu99 -Wall -fPIC

test-suite tasty-tests
  type: exitcode-stdio-1.0
  main-is: tasty.hs
  other-modules: BuzHash, Table
  hs-source-dirs: tests
  build-depends: base
               , buzhash
               , bytestring
               , crypto-api == 0.13.*
               , cryptohash-cryptoapi == 0.1.*
               , DRBG == 0.5.*
               , QuickCheck >= 2.7 && < 3
               , quickcheck-instances >= 0.3
               , tasty == 0.8.*
               , tasty-hunit == 0.9.*
               , tasty-quickcheck == 0.8.*
               , vector == 0.10.*
  default-language: Haskell2010
  ghc-options: -threaded -Wall

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs: tests
  build-depends: base
               , directory
               , doctest >= 0.9
               , filepath
               , mtl
  default-language: Haskell2010
  ghc-options: -threaded -Wall
